# purpose-plugins-dummy

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/share-fail/: CMakeLists.txt  Messages.sh  sharefailplugin.cpp  sharefailplugin.json
src/share-success/: CMakeLists.txt  Messages.sh  sharesuccessplugin.cpp  sharesuccessplugin.json
